# hotel-airsnitch-scanner

./: .gitignore  CLAUDE.md  README.md  Vagrantfile  pyproject.toml
src/airsnitch/: __init__.py  cli.py  config.py
src/airsnitch/attacks/: base.py  downlink_spoof.py  gateway_bounce.py  gtk_injection.py  uplink_impersonation.py
src/airsnitch/core/: adapter.py  context.py  packets.py  types.py
src/airsnitch/discovery/: fingerprint.py  scanner.py
src/airsnitch/reporting/: json_report.py  terminal.py
src/airsnitch/safeguards/: audit.py  authorization.py  rate_limiter.py
src/airsnitch/scoring/: engine.py
tests/: test_attacks.py  test_cli.py  test_config.py  test_crypto_vectors.py  test_eapol_parsing.py  test_packet_wire_format.py  test_reporting.py  test_safeguards.py  test_scoring.py  test_types.py
tests/hwsim/: conftest.py  run_gtk_extraction.py  setup_hwsim.sh  teardown_hwsim.sh  test_integration.py
