[project]
name = "airsnitch"
version = "0.1.0"
description = "Hotel Wi-Fi security assessment tool for AirSnitch client isolation bypass vulnerabilities"
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.5",
    "click>=8.1",
    "rich>=13.0",
    "netifaces>=0.11",
    "cryptography>=41.0",
]

[project.scripts]
airsnitch = "airsnitch.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airsnitch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["hwsim: requires mac80211_hwsim (Linux only)"]
filterwarnings = [
    "ignore::DeprecationWarning:scapy.*",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
